--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-dom": "^19.2.0",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
