--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
     "firebase": "^12.8.0",
+    "framer-motion": "^12.29.2",
+    "jspdf-autotable": "^5.0.7",
+    "motion": "^12.29.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.26.17",
     "swiper": "^12.0.3",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
